feat(gc): per-pause GC diagnostics, verdict, and copy-for-LLM payload (#29)
* feat(gc): per-pause GC diagnostics, verdict, and copy-for-LLM payload

Extend the existing metrics pipeline with rich per-pause GC statistics and
a deterministic, LLM-free GC health verdict surfaced to the operator.

- dc-agent-core: new TGcInfo DTO (per-pause aggregates, -1 sentinels);
  add nullable TSystemInfo.gc.
- dc-agent-app: GcStatsCollector subscribes to GarbageCollection JMX
  notifications and keeps bounded aggregates only; wired into
  SystemInfoCollector (install on start, snapshot in collect).
- dc-agent-operator: GcDoctor turns raw numbers into an OK/WARN/CRITICAL
  verdict via narrow, pre-worded rules; GcLlmPayloadBuilder assembles a
  self-contained copy-for-LLM text block. No network/LLM call is made.
  Extend TAgentMetrics + AgentMetricsMapper (raw + *Text, null-gc guards)
  and thread the agent name through AgentServiceImpl.fetchMetrics.
- tests: GcDoctorTest covers each rule + payload contents + null-gc
  fallback; AgentServiceImplTest asserts the mapped verdict/payload.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* fix(gc): drop useless null check and de-duplicate byte formatter

Address the SonarCloud quality gate + CodeQL findings on PR #29:

- GcLlmPayloadBuilder: remove the redundant `if (aInfo != null)` guard
  around the heap/CPU context block. By that point `gc` is non-null and
  `gc` is only non-null when `aInfo` was, so the check was always true
  (CodeQL java/useless-null-check #648, Sonar reliability). The block now
  runs unconditionally with a comment explaining the invariant.
- Extract the byte-scale formatter into a single package-private
  MetricFormat.bytes(long) (5-unit KB..PB superset) and route GcDoctor,
  GcLlmPayloadBuilder and AgentMetricsMapper to it, removing the three
  duplicated copies that tripped Sonar's new-code duplication gate.

No behavior change: output is identical. Build green, 89 tests pass.

Co-Authored